[gd_scene load_steps=12 format=3 uid="uid://bjg8gvureftb4"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_mq18l"]
[ext_resource type="Script" path="res://first_upgrade.gd" id="2_hwxii"]
[ext_resource type="Script" path="res://first_click.gd" id="3_p2jh1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghua4"]
bg_color = Color(0.345692, 0.633827, 0.822037, 1)

[sub_resource type="Theme" id="Theme_tcnvm"]
Button/styles/normal = SubResource("StyleBoxFlat_ghua4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mj6u"]
bg_color = Color(0.706596, 0.56508, 0.50276, 1)

[sub_resource type="Theme" id="Theme_3f531"]
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/background = SubResource("StyleBoxFlat_1mj6u")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2jbr6"]
bg_color = Color(0.275769, 0.153867, 0.0380577, 1)

[sub_resource type="Theme" id="Theme_isf1c"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_2jbr6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujhby"]
bg_color = Color(0.656677, 0.608395, 0.267725, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4w0p"]
bg_color = Color(0.502208, 0.577706, 0.894121, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mq18l")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 897.0
offset_bottom = 649.0

[node name="GrowButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 280.0
offset_top = 307.0
offset_right = 653.0
offset_bottom = 393.0
theme = SubResource("Theme_tcnvm")
text = "This will be a caterpillar"

[node name="PointsLabel" type="RichTextLabel" parent="Control"]
layout_mode = 2
offset_left = 10.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_3f531")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center][font_size=15]Points: "
fit_content = true
scroll_active = false
autowrap_mode = 0
tab_size = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 13.0
offset_top = 36.0
offset_right = 172.0
offset_bottom = 63.0
bbcode_enabled = true
text = "[font_size=12]Points per second:"
fit_content = true

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 896.0
offset_top = 88.0
offset_right = 1151.0
offset_bottom = 651.0
theme = SubResource("Theme_isf1c")
theme_override_styles/panel = SubResource("StyleBoxFlat_ujhby")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="UpgradeContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="First Upgrade" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"
autowrap_mode = 3
script = ExtResource("2_hwxii")

[node name="Second Upgrade" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy another thing"

[node name="EnableAutoButton" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Auto Click: Enabled"

[node name="Timer" type="Timer" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer/EnableAutoButton"]
autostart = true

[node name="First Click" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "First Click Upgrade"
autowrap_mode = 3
script = ExtResource("3_p2jh1")

[node name="Second Click" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade4" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade5" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade6" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade7" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade8" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade9" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade10" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade11" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade12" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade13" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade14" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade15" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="First Upgrade16" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer"]
layout_mode = 2
text = "Buy a thing"

[node name="PanelContainer2" type="PanelContainer" parent="."]
offset_left = 896.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 88.0
theme_override_styles/panel = SubResource("StyleBoxFlat_e4w0p")

[connection signal="pressed" from="Control/GrowButton" to="." method="_on_grow_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer/First Upgrade" to="." method="_on_first_upgrade_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer/EnableAutoButton" to="." method="_on_enable_auto_button_pressed"]
[connection signal="timeout" from="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer/EnableAutoButton/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ScrollContainer/UpgradeContainer/First Click" to="." method="_on_first_click_pressed"]
